Enhancement: Remove jquery, update google maps, fix admin styling (#99)
* Enhancement: Remove jquery, update google maps, fix admin styling

* Enhancement: Remove jquery, update google maps, fix admin styling

# Conflicts:
#	django_google_maps/static/django_google_maps/js/google-maps-admin.js
#	django_google_maps/widgets.py

* Test: Fixed tests with updated template

* Enhancement: Load Google Maps async. Also update to newer markers

* Test: fix test

* Style: Ignore Line too long

* Enhancement: Move inline styling to css

* Style: fix flake8 violation

* Enhancement: use django 5.2 script object when available

* Enhancement: Add space between address input field and map

---------

--- a/django_google_maps/static/django_google_maps/css/google-maps-admin.css
+++ b/django_google_maps/static/django_google_maps/css/google-maps-admin.css
@@ -1,11 +1,43 @@
 @media (min-width: 848px) {
-    .map_canvas_wrapper {margin-left: 170px;}
-    .main.shifted .map_canvas_wrapper {margin-left: 0;}
-}
-@media (min-width: 1118px) {
-    .main.shifted .map_canvas_wrapper {margin-left: 170px;}
+    .main.shifted .map_canvas_wrapper {
+        margin-left: 0;
+    }
 }
 
-#id_address {width: 40em;}
-.map_canvas_wrapper {width: 100%;}
-#map_canvas {width: 100%; height: 40em;}
+#id_address {
+    width: 40em;
+}
+
+.map_widget_wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 0.5rem;
+}
+
+.map_canvas_wrapper {
+    width: 100%;
+}
+
+#map_canvas {
+    width: 100%;
+    height: 40em;
+}
+
+#map_message_box {
+    background-color: #eff6ff;
+    color: #1e40af;
+    padding: 12px 20px;
+    border-radius: 8px;
+    border: 1px solid #bfdbfe;
+    display: none; /* Hidden by default */
+    font-size: 0.9rem;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    float: none;
+}
+
+#map_message_box.show {
+    display: block;
+    opacity: 1;
+}
